# PCCTAirwaySegmentation

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SetupDevelopment.sh  pixi.toml
AnalyzeAirwaySeg/: CMakeLists.txt  Handoff.md  README.md  RegistrationPrototype.ipynb
AnalyzeAirwaySeg/AirwayRegistration/src/: AirwayRegistration.cxx  AirwayRegistration.h  AirwayRegistration.xml  CMakeLists.txt
AnalyzeAirwaySeg/AnalyzeAirwaySeg/: AnalyzeAirwaySeg.py
AnalyzeAirwaySeg/AnalyzeAirwaySeg/atm22/: tree_parse.py
AnalyzeAirwaySeg/AnalyzeAirwaySegPython/: CMakeLists.txt
AnalyzeAirwaySeg/AnalyzeAirwaySegPython/Resources/UI/: AnalyzeAirwaySeg.ui
AnalyzeAirwaySeg/AnalyzeAirwaySegPython/testdata/: 2026-06-09-Scene.mrml
AnalyzeAirwaySeg/AnalyzeAirwaySegmentation/: AnalyzeAirwaySegmentation.py  AnalyzeAirwaySegmentation.xml  CMakeLists.txt  evaluate.py
AnalyzeAirwaySeg/AnalyzeAirwaySegmentation/src/: AnalyzeAirwaySegmentation.cxx  CMakeLists.txt
AnalyzeAirwaySeg/AnalyzeAirwaySegmentationV2/: evaluate.py
AnalyzeAirwaySeg/AnalyzeAirwaySegmentationV2/atm22/: tree_parse.py
AnalyzeAirwaySeg/AnalyzeAirwaySegmentationV2/src/: AnalyzeAirwaySegmentation.cxx  AnalyzeAirwaySegmentation.xml
AnalyzeAirwaySeg/prototyping/: registration.ipynb
GetAeroPathData/: GetAeroPathData.ipynb  GetAeroPathData.py
GroundTruthRegistration/: prototype.ipynb
GroundTruthRegistration/TestData/: 2026-06-09-Scene.mrml  Segmentation_1.labels.csv
GroundTruthRegistration/src/: CMakeLists.txt  GroundTruthRegistration.cxx  GroundTruthRegistration.h  GroundTruthRegistration.xml  RunRegistration.cxx  RunRegistration.xml
Tests/: CMakeLists.txt  GroundTruthRegistrationTest.cxx
